added spacing for insert/update forms on Types page; added dropdowns for weakAgainst and atrongAgainst instead of text input

--- a/types.html
+++ b/types.html
@@ -155,9 +155,30 @@
                       <fieldset class="fields">
                         <label> Type Name </label> <input type="text" name="typeName" style="margin-bottom: 10px">
                         <br>
-                        <label> Weak Against </label> <input type="text" name="weakAgainst" style="margin-bottom: 10px">
+                        <!-- <label> Weak Against </label> <input type="text" name="weakAgainst" style="margin-bottom: 10px"> -->
+                        <label> Weak Against </label>
+                            <select name="weakAgainst" style="margin-bottom: 10px">
+                                <option value="0">&nbsp;</option>
+                                <option value="fire">Fire</option>
+                                <option value="water">Water</option>
+                                <option value="grass">Grass</option>
+                                <option value="ghost">Ghost</option>
+                                <option value="electric">Electric</option>
+                                <option value="psychic">Psychic</option>
+                                <option value="normal">Normal</option>
+                            </select>
                         <br>
-                        <label> Strong Against </label> <input type="text" name="strongAgainst" style="margin-bottom: 10px">
+                        <label> Strong Against </label>
+                            <select name="strongAgainst" style="margin-bottom: 10px">
+                                <option value="0">&nbsp;</option>
+                                <option value="fire">Fire</option>
+                                <option value="water">Water</option>
+                                <option value="grass">Grass</option>
+                                <option value="ghost">Ghost</option>
+                                <option value="electric">Electric</option>
+                                <option value="psychic">Psychic</option>
+                                <option value="normal">Normal</option>
+                            </select>
                         <br>
                   </fieldset><p id ="center">
                       <button type="submit" id="addType">Add Type</button>
@@ -175,9 +196,29 @@
                         <br>
                         <label> Type Name </label> <input type="text" name="typeName" style="margin-bottom: 10px">
                         <br>
-                        <label> Weak Against </label> <input type="text" name="weakAgainst" style="margin-bottom: 10px">
+                        <label> Weak Against </label>
+                            <select name="weakAgainst" style="margin-bottom: 10px">
+                                <option value="0">&nbsp;</option>
+                                <option value="fire">Fire</option>
+                                <option value="water">Water</option>
+                                <option value="grass">Grass</option>
+                                <option value="ghost">Ghost</option>
+                                <option value="electric">Electric</option>
+                                <option value="psychic">Psychic</option>
+                                <option value="normal">Normal</option>
+                            </select>
                         <br>
-                        <label> Strong Against </label> <input type="text" name="strongAgainst" style="margin-bottom: 10px">
+                        <label> Strong Against </label>
+                            <select name="strongAgainst" style="margin-bottom: 10px">
+                                <option value="0">&nbsp;</option>
+                                <option value="fire">Fire</option>
+                                <option value="water">Water</option>
+                                <option value="grass">Grass</option>
+                                <option value="ghost">Ghost</option>
+                                <option value="electric">Electric</option>
+                                <option value="psychic">Psychic</option>
+                                <option value="normal">Normal</option>
+                            </select>
                         <br>
                   </fieldset>
                   <p id = "center">
