--- a/peoplebattles.html
+++ b/peoplebattles.html
@@ -125,7 +125,7 @@
                     <legend><strong>Add Player Battle</strong></legend>
                       <fieldset class="fields">
                         <label> Player 1 </label> 
-                            <select name="people" style="margin-bottom: 10px">
+                            <select name="player1ID" style="margin-bottom: 10px">
                                 <option value="0">&nbsp;</option>
                                 <option value="1">Jessie</option>
                                 <option value="2">Misty</option>
@@ -133,7 +133,7 @@
                                 </select>
                         <br>
                         <label> Player 2 </label> 
-                            <select name="people" style="margin-bottom: 10px">
+                            <select name="player2ID" style="margin-bottom: 10px">
                                 <option value="0">&nbsp;</option>
                                 <option value="1">Jessie</option>
                                 <option value="2">Misty</option>
@@ -160,14 +160,14 @@
                     <legend><strong>Update Player Battle</strong></legend>
                     <fieldset class="fields">
                         <label> Player 1 </label> 
-                            <select name="people" style="margin-bottom: 10px">
+                            <select name="player1ID" style="margin-bottom: 10px">
                                 <option value="0">Jessie</option>
                                 <option value="1">Misty</option>
                                 <option value="2">Ash</option>
                                 </select>
                         <br>
                         <label> Player 2 </label> 
-                            <select name="people" style="margin-bottom: 10px">
+                            <select name="player2ID" style="margin-bottom: 10px">
                                 <option value="0">Misty</option>
                                 <option value="1">Jessie</option>
                                 <option value="2">Ash</option>
