aliased column names

--- a/pokemon.html
+++ b/pokemon.html
@@ -77,10 +77,10 @@
                     </p>
                     <table border="1" cellpadding="5" id="centerMargin">
                       <tr>
-                        <th>pokeid</th>
-                        <th>pokeName</th>
-                        <th>isBaby</th>
-                        <th>pokeRarity</th>
+                        <th>Pokemon ID</th>
+                        <th>Pokemon Name</th>
+                        <th>Is Baby?</th>
+                        <th>Pokemon Rarity</th>
                         <th>Edit Entry</th>
                         <th>Delete Entry</th>
                       </tr>
