aliased column names

--- a/people.html
+++ b/people.html
@@ -77,9 +77,9 @@
                     </p>
                     <table border="1" cellpadding="5" id="centerMargin">
                       <tr>
-                        <th>peopleid</th>
-                        <th>peopleName</th>
-                        <th>affiliation</th>
+                        <th>Person ID</th>
+                        <th>Person Name</th>
+                        <th> Person Affiliation</th>
                         <th>Edit Entry</th>
                         <th>Delete Entry</th>
                       </tr>
