aliased column names

--- a/affiliations.html
+++ b/affiliations.html
@@ -83,10 +83,10 @@
 
                 <table border="1" cellpadding="5" id="centerMargin">
                     <tr>
-                        <th>affiliationID</th>
-                        <th>AffiliationType</th>
-                        <th>affiliationRank</th>
-                        <th>typeDescription</th>
+                        <th>Affiliation ID</th>
+                        <th>Affiliation Type</th>
+                        <th>Affiliation Rank</th>
+                        <th>Type Description</th>
                         <th>Edit Entry</th>
                         <th>Delete Entry</th>
                     </tr>
