aliased column names

--- a/types.html
+++ b/types.html
@@ -83,10 +83,10 @@
 
                 <table border="1" cellpadding="5" id="centerMargin">
                     <tr>
-                        <th>typeID</th>
-                        <th>typeName</th>
-                        <th>weakAgainst</th>
-                        <th>strongAgainst</th>
+                        <th>Type ID</th>
+                        <th>Type Name</th>
+                        <th>Weak Against</th>
+                        <th>Strong Against</th>
                         <th>Edit Entry</th>
                         <th>Delete Entry</th>
                     </tr>
