--- a/battles.html
+++ b/battles.html
@@ -83,9 +83,9 @@
 
                 <table border="1" cellpadding="5" id="centerMargin">
                     <tr>
-                        <th>battleID</th>
-                        <th>battleDate</th>
-                        <th>battleSetting</th>
+                        <th>Battle ID</th>
+                        <th>Battle Date</th>
+                        <th>Battle Setting</th>
                         <th>Edit Entry</th>
                         <th>Delete Entry</th>
                     </tr>
