aliased column names

--- a/pokemonpeople.html
+++ b/pokemonpeople.html
@@ -79,9 +79,9 @@
                       <tr>
                         <th>Pokemon</th>
                         <th>Owner</th>
-                        <th>pokeNickname</th>
-                        <th>caughtDate</th>
-                        <th>caughtAt</th>
+                        <th>Pokemon Nickname</th>
+                        <th>Caught Date</th>
+                        <th>Caught At</th>
                         <th>Edit Entry</th>
                         <th>Delete Entry</th>
                       </tr>
