--- a/peoplebattles.html
+++ b/peoplebattles.html
@@ -83,9 +83,9 @@
 
                 <table border="1" cellpadding="5" id="centerMargin">
                     <tr>
-                        <th>peopleID</th>
-                        <th>battleID</th>
-                        <th>battleResult</th>
+                        <th>Person ID</th>
+                        <th>Battle ID</th>
+                        <th>Battle Result</th>
                         <th>Edit Entry</th>
                         <th>Delete Entry</th>
                     </tr>
