added asterisks to indicate required fields

--- a/pokemon.html
+++ b/pokemon.html
@@ -132,15 +132,15 @@
                         <form method="POST" id="addPokemon">
                             <legend><strong>Add Pokemon</strong></legend>
                               <fieldset class="fields">
-                                <label> Pokemon Name </label> <input type="text" name="pokeName">
+                                <label>* Pokemon Name </label> <input type="text" name="pokeName">
                                 <br>
-                                <label> Is it a baby Pokemon? </label> <select name="isBaby">
+                                <label>* Is it a baby Pokemon? </label> <select name="isBaby">
                                     <option value="0">&nbsp;</option>
                                     <option value="1">True</option>
                                     <option value="2">False</option>
                                     </select>
                                     <br>
-                                <label> Rarity </label> <select name="pokeRarity">
+                                <label>* Rarity </label> <select name="pokeRarity">
                                     <option value="0">&nbsp;</option>
                                     <option value="1">Common</option>
                                     <option value="2">Rare</option>
