added asterisks to indicate required fields

--- a/people.html
+++ b/people.html
@@ -112,7 +112,7 @@
                         <form method="POST" id="addPerson">
                             <legend><strong>Add Person</strong></legend>
                               <fieldset class="fields">
-                                <label> Name </label> <input type="text" name="peopleName">
+                                <label>* Name </label> <input type="text" name="peopleName">
                                 <br>
                                 <label> Affiliation </label> <select name="affiliation">
                                   <option value="0">&nbsp;</option>
