added asterisks to indicate required fields

--- a/affiliations.html
+++ b/affiliations.html
@@ -121,9 +121,9 @@
                 <form method="POST" id="addAffiliation">
                     <legend><strong>Add Affiliation</strong></legend>
                       <fieldset class="fields">
-                        <label> Affiliation Type </label> <input type="text" name="affiliationType" style="margin-bottom: 10px">
+                        <label>* Affiliation Type </label> <input type="text" name="affiliationType" style="margin-bottom: 10px">
                         <br>
-                        <label> Affiliation Rank </label> <input type="text" name="affiliationRank" style="margin-bottom: 10px">
+                        <label>* Affiliation Rank </label> <input type="text" name="affiliationRank" style="margin-bottom: 10px">
                         <br>
                         <label> Type Description </label> <input type="text" name="typeDescription" style="margin-bottom: 10px">
                         <br>
