added asterisks to indicate required fields

--- a/types.html
+++ b/types.html
@@ -153,10 +153,10 @@
                 <form method="POST" id="addType">
                     <legend><strong>Add Type</strong></legend>
                       <fieldset class="fields">
-                        <label> Type Name </label> <input type="text" name="typeName" style="margin-bottom: 10px">
+                        <label>* Type Name </label> <input type="text" name="typeName" style="margin-bottom: 10px">
                         <br>
                         <!-- <label> Weak Against </label> <input type="text" name="weakAgainst" style="margin-bottom: 10px"> -->
-                        <label> Weak Against </label>
+                        <label>* Weak Against </label>
                             <select name="weakAgainst" style="margin-bottom: 10px">
                                 <option value="0">&nbsp;</option>
                                 <option value="fire">Fire</option>
@@ -168,7 +168,7 @@
                                 <option value="normal">Normal</option>
                             </select>
                         <br>
-                        <label> Strong Against </label>
+                        <label>* Strong Against </label>
                             <select name="strongAgainst" style="margin-bottom: 10px">
                                 <option value="0">&nbsp;</option>
                                 <option value="fire">Fire</option>
