added asterisks to indicate required fields

--- a/pokemontypes.html
+++ b/pokemontypes.html
@@ -120,7 +120,7 @@
                         <form method="POST" id="addPokeType">
                             <legend><strong>Add a Pokemon and their typing</strong></legend>
                               <fieldset class="fields">
-                                <label> Pokemon </label> <select name="Pokemon">
+                                <label>* Pokemon </label> <select name="Pokemon">
                                     <option value="0">&nbsp;</option>
                                     <option value="1">Pikachu</option>
                                     <option value="2">Charizard</option>
@@ -129,7 +129,7 @@
                                     <option value="5">Arceus</option>
                                     </select>
                                 <br>
-                                <label> Type </label> <select name="Type">
+                                <label>* Type </label> <select name="Type">
                                     <option value="0">&nbsp;</option>
                                     <option value="1">Fire</option>
                                     <option value="2">Water</option>
