--- a/peoplebattles.html
+++ b/peoplebattles.html
@@ -124,7 +124,7 @@
                 <form method="POST" id="addPersBat">
                     <legend><strong>Add Player Battle</strong></legend>
                       <fieldset class="fields">
-                        <label> Player 1 </label> 
+                        <label>* Player 1 </label> 
                             <select name="player1ID" style="margin-bottom: 10px">
                                 <option value="0">&nbsp;</option>
                                 <option value="1">Jessie</option>
@@ -132,7 +132,7 @@
                                 <option value="3">Ash</option>
                                 </select>
                         <br>
-                        <label> Player 2 </label> 
+                        <label>* Player 2 </label> 
                             <select name="player2ID" style="margin-bottom: 10px">
                                 <option value="0">&nbsp;</option>
                                 <option value="1">Jessie</option>
@@ -140,7 +140,7 @@
                                 <option value="3">Ash</option>
                                 </select>
                         <br>
-                        <label> Who won the battle? </label> 
+                        <label>* Who won the battle? </label> 
                             <br>
                             <input type="radio" id="player1" name="battleWinner" value="player1" style="margin-bottom: 10px;">
                             <label for="battleWinner">Player 1</label>
