Update pages with 'required' and battleID to PeopleBattle (#5)
* Added 'required' to form constraints

* Added 'required' to from costraints

* Added battleID field to INSERT and UPDATE

--- a/battles.html
+++ b/battles.html
@@ -117,9 +117,9 @@
                 <form method="POST" id="addBattle">
                     <legend><strong>Add Battle</strong></legend>
                       <fieldset class="fields">
-                        <label>* Battle Date </label> <input type="date" name="battleDate" style="margin-bottom: 10px">
+                        <label>* Battle Date </label> <input type="date" name="battleDate" style="margin-bottom: 10px" required>
                         <br>
-                        <label>* Battle Setting </label> <input type="text" name="battleSetting" style="margin-bottom: 10px">
+                        <label>* Battle Setting </label> <input type="text" name="battleSetting" style="margin-bottom: 10px" required>
                         <br>
                   </fieldset><p id ="center">
                       <button type="submit" id="addBattle">Add Battle</button>
