--- a/pokemontypes.html
+++ b/pokemontypes.html
@@ -120,7 +120,7 @@
                         <form method="POST" id="addPokeType">
                             <legend><strong>Add a Pokemon and their typing</strong></legend>
                               <fieldset class="fields">
-                                <label>* Pokemon </label> <select name="Pokemon">
+                                <label>* Pokemon </label> <select name="Pokemon" style="margin-bottom: 10px" required>
                                     <option value="0">&nbsp;</option>
                                     <option value="1">Pikachu</option>
                                     <option value="2">Charizard</option>
@@ -129,7 +129,7 @@
                                     <option value="5">Arceus</option>
                                     </select>
                                 <br>
-                                <label>* Type </label> <select name="Type">
+                                <label>* Type </label> <select name="Type" style="margin-bottom: 10px" required>
                                     <option value="0">&nbsp;</option>
                                     <option value="1">Fire</option>
                                     <option value="2">Water</option>
@@ -151,7 +151,7 @@
                         <form method="POST" id="updatePokeType">
                             <legend><strong>Update Pokemon and their Typing</strong></legend>
                               <fieldset class="fields">
-                                <label> Pokemon </label> <select name="Pokemon">
+                                <label> Pokemon </label> <select name="Pokemon" style="margin-bottom: 10px">
                                     <option value="0">Pikachu</option>
                                     <option value="1">Charizard</option>
                                     <option value="2">Budew</option>
@@ -159,7 +159,7 @@
                                     <option value="4">Arceus</option>
                                     </select>
                                 <br>
-                                <label> Type </label> <select name="Type">
+                                <label> Type </label> <select name="Type" style="margin-bottom: 10px">
                                     <option value="0">Electric</option>
                                     <option value="1">Fire</option>
                                     <option value="2">Water</option>
