--- a/peoplebattles.html
+++ b/peoplebattles.html
@@ -124,8 +124,16 @@
                 <form method="POST" id="addPersBat">
                     <legend><strong>Add Player Battle</strong></legend>
                       <fieldset class="fields">
+                        <label>* Battle ID </label> 
+                        <select name="battleID" style="margin-bottom: 10px" required>
+                            <option value="0">&nbsp;</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            </select>
+                    <br>
                         <label>* Player 1 </label> 
-                            <select name="player1ID" style="margin-bottom: 10px">
+                            <select name="player1ID" style="margin-bottom: 10px" required>
                                 <option value="0">&nbsp;</option>
                                 <option value="1">Jessie</option>
                                 <option value="2">Misty</option>
@@ -133,7 +141,7 @@
                                 </select>
                         <br>
                         <label>* Player 2 </label> 
-                            <select name="player2ID" style="margin-bottom: 10px">
+                            <select name="player2ID" style="margin-bottom: 10px" required>
                                 <option value="0">&nbsp;</option>
                                 <option value="1">Jessie</option>
                                 <option value="2">Misty</option>
@@ -159,6 +167,12 @@
                 <form method="POST" id="updatePersBat">
                     <legend><strong>Update Player Battle</strong></legend>
                     <fieldset class="fields">
+                        <label> Battle ID </label> 
+                        <select name="battleID" style="margin-bottom: 10px">
+                            <option value="0">1</option>
+                            <option value="1">2</option>
+                            <option value="2">3</option>
+                            </select><br>
                         <label> Player 1 </label> 
                             <select name="player1ID" style="margin-bottom: 10px">
                                 <option value="0">Jessie</option>
@@ -198,7 +212,7 @@
                         <br>
                         <label> <strong>Player 1 ID#: </strong> </label> 1
                         <br>
-                        <label><strong> Player 1 ID#: </strong></label> 2
+                        <label><strong> Player 2 ID#: </strong></label> 2
                         <br>
                   </fieldset>
                   <p id = "center">
