Removed 'required' and asterisks to implement optional relationship in peoplebattles

--- a/peoplebattles.html
+++ b/peoplebattles.html
@@ -124,24 +124,24 @@
                 <form method="POST" id="addPersBat">
                     <legend><strong>Add Player Battle</strong></legend>
                       <fieldset class="fields">
-                        <label>* Battle ID </label> 
-                        <select name="battleID" style="margin-bottom: 10px" required>
+                        <label> Battle ID </label> 
+                        <select name="battleID" style="margin-bottom: 10px">
                             <option value="0">&nbsp;</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             </select>
                     <br>
-                        <label>* Player 1 </label> 
-                            <select name="player1ID" style="margin-bottom: 10px" required>
+                        <label> Player 1 </label> 
+                            <select name="player1ID" style="margin-bottom: 10px">
                                 <option value="0">&nbsp;</option>
                                 <option value="1">Jessie</option>
                                 <option value="2">Misty</option>
                                 <option value="3">Ash</option>
                                 </select>
                         <br>
-                        <label>* Player 2 </label> 
-                            <select name="player2ID" style="margin-bottom: 10px" required>
+                        <label> Player 2 </label> 
+                            <select name="player2ID" style="margin-bottom: 10px">
                                 <option value="0">&nbsp;</option>
                                 <option value="1">Jessie</option>
                                 <option value="2">Misty</option>
